[gd_scene load_steps=4 format=3 uid="uid://cmd7kak7nst2"]

[ext_resource type="Script" path="res://scripts/dialogue/DialogueBox.gd" id="1_dialogue_box"]
[ext_resource type="Theme" uid="uid://dshck318jhgki" path="res://scenes/ui/Theme/MainUITheme.tres" id="2_main_theme"]
[ext_resource type="Texture2D" uid="uid://t88codyk3lu0" path="res://assets/ui/UI箭头.png" id="3_7ti2q"]

[node name="DialogueBox" type="CanvasLayer"]
layer = 50
script = ExtResource("1_dialogue_box")

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme = ExtResource("2_main_theme")

[node name="MarginContainer" type="MarginContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PortraitRect" type="TextureRect" parent="DialoguePanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="DialoguePanel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "角色名"

[node name="TextLabel" type="Label" parent="DialoguePanel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 8
autowrap_mode = 2

[node name="ContinueIndicator" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -30.0
offset_right = -14.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_7ti2q")
expand_mode = 1
